--- a/go-openapi-check/.openapi-generator-ignore
+++ b/go-openapi-check/.openapi-generator-ignore
@@ -30,6 +30,8 @@
 
 # The following entries are pre-populated based on the input obtained via
 # the option `openapiGeneratorIgnoreList` (--openapi-generator-ignore-list in CLI for example).
+controller.go
+internal
 go.mod
 main.go
 README.md
