--- a/go-openapi-check/Dockerfile
+++ b/go-openapi-check/Dockerfile
@@ -1,8 +1,8 @@
-FROM golang:1.22 AS build
+FROM golang:1.22 AS builder
 
 ADD . /app
 WORKDIR /app
-RUN GOOS=linux GOARCH=amd64 go build -o go-mongodb-app ./cmd/go-mongodb-crud-api-example
+RUN GOOS=linux GOARCH=amd64 go build -o go-mongodb-app .
 
 FROM alpine:3.19 AS app
 WORKDIR /app
