moved to cmd but needs some more rework

--- a/go-openapi-check/Dockerfile
+++ b/go-openapi-check/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.22 AS builder
 
 ADD . /app
 WORKDIR /app
-RUN GOOS=linux GOARCH=amd64 go build -o go-mongodb-app .
+RUN GOOS=linux GOARCH=amd64 go build -o go-mongodb-app ./cmd/go-openapi-generator-example
 
 FROM alpine:3.19 AS app
 WORKDIR /app
