--- a/go-openapi-check/.openapi-generator-ignore
+++ b/go-openapi-check/.openapi-generator-ignore
@@ -30,7 +30,11 @@
 
 # The following entries are pre-populated based on the input obtained via
 # the option `openapiGeneratorIgnoreList` (--openapi-generator-ignore-list in CLI for example).
+docker-compose.yaml
+Dockerfile
+openapi/logger.go
 internal
 go.mod
 main.go
+cmd
 README.md
