added .env config

--- a/go-openapi-example/Dockerfile
+++ b/go-openapi-example/Dockerfile
@@ -7,4 +7,5 @@ RUN GOOS=linux GOARCH=amd64 go build -o go-mongodb-app ./cmd/go-openapi-generato
 FROM alpine:3.19 AS app
 WORKDIR /app
 COPY --from=builder /app/go-mongodb-app /app
+COPY --from=builder /app/cmd/go-openapi-generator-example/.env /app
 CMD ["/app/go-mongodb-app"]
